# Student-Wellbeing-Monitor

./: .gitignore  API Document.md  API.md  README.md  pylint_report.txt  pyproject.toml
.github/workflows/: lint.yml  tests-coverage.yml
data/: student.db
data/mock/: attendance_week1.csv  attendance_week2.csv  attendance_week3.csv  attendance_week4.csv  attendance_week5.csv  attendance_week6.csv  attendance_week7.csv  attendance_week8.csv  modules.csv  student_modules.csv  students.csv  submissions-CS3K1.csv  submissions-DS2F6.csv  submissions-DS2O7.csv  submissions-EC1B8.csv  submissions-EC1K8.csv  submissions-EC1T8.csv  submissions-MA2F6.csv  submissions-MA2I6.csv  submissions-SE1J1.csv  submissions-WG3S3.csv  wellbeing.csv  wellbeing_week1.csv  wellbeing_week2.csv  wellbeing_week3.csv  wellbeing_week4.csv  wellbeing_week5.csv  wellbeing_week6.csv  wellbeing_week7.csv  wellbeing_week8.csv
data/scripts/: generate_mock_csv.py
data/scripts/mock_core/: base.py  submission.py
database/: 2_generate_data.py  database_test.py  db.py  student.db
database/data/: student.db
mock_data/mock/: attendance_week1.csv  attendance_week10.csv  attendance_week11.csv  attendance_week12.csv  attendance_week2.csv  attendance_week3.csv  attendance_week4.csv  attendance_week5.csv  attendance_week6.csv  attendance_week7.csv  attendance_week8.csv  attendance_week9.csv  modules.csv  programme.csv  programmes.csv  student_module.csv  student_modules.csv  students.csv  submissions-CS3A1.csv  submissions-MA1S3.csv  submissions-MA3S4.csv  submissions-ML1O9.csv  submissions-ML2S6.csv  submissions-SE1G5.csv  submissions-SE1P4.csv  submissions-WG2Q9.csv  submissions_BX1W1.csv  submissions_CF3C7.csv  submissions_CF3N3.csv  submissions_EK3H2.csv  submissions_EU2N4.csv  submissions_FH1D1.csv  submissions_FK1V6.csv  submissions_FM3F7.csv  submissions_FO3K4.csv  submissions_GG1V6.csv  submissions_HA3E1.csv  submissions_HI3G8.csv  submissions_HO3S2.csv  submissions_HU3D5.csv  (+55 more)
mock_data/scripts/: generate_all.py  generate_behaviour.py  generate_entities.py
mock_data/scripts/mock_core/: __init__.py  attendance.py  base.py  entities.py  submission.py  wellbeing.py
service/: Analytics_service.py  Course_Service.py  wellbeing_service.py  wellbing_service.py
src/database/: 1_create_database.py  db.py
src/database/data/: student.db
src/student_wellbeing_monitor/data/: student.db
src/student_wellbeing_monitor/database/: 1_create_database.py  2_generate_data.py  create.py  db_core.py  delete.py  read.py  schema.py  update.py
src/student_wellbeing_monitor/services/: API Document.md  archive_service.py  attendance_service.py  course_service.py  dashboard_service.py  service_utils.py  test.py  upload_service.py  wellbeing_analytic.py  wellbeing_service.py  wellbeing_service1.py
src/student_wellbeing_monitor/tools/: archive.py  reset_db.py  setup_demo.py  start.py  test.py
src/student_wellbeing_monitor/ui/: app.py  charts.py
src/tests/: conftest.py  test_app.py  test_dashboard_service.py  test_database.py  test_services.py  test_ui.py
(+9 files in other folders)
