[project]
name = "student-wellbeing-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "lw384",email = "15651756926@163.com"}
]

readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "faker (>=38.2.0,<39.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "google-genai (>=1.53.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
wellbeing-web = "student_wellbeing_monitor.ui.app:run_app"
setup-demo = "student_wellbeing_monitor.tools.setup_demo:setup_demo"
start = "student_wellbeing_monitor.tools.start:run"
archive-data = "student_wellbeing_monitor.tools.archive:main"